tdf#143612: map SecondaryRefValue in form pdf export

Change-Id: I590784eb94fb6f4f3a20c4f6d8e3fb618f60d0fc