toolkit/source/helper/formpdfexport.cxx
@@ -571,6 +571,14 @@ namespace toolkitform
                 catch(...)
                 {
                 }
+
+                try
+                {
+                    xModelProps->getPropertyValue( "SecondaryRefValue" ) >>= pCheckBoxWidget->OffValue;
+                }
+                catch(...)
+                {
+                }
             }
 
 
@@ -586,6 +594,14 @@ namespace toolkitform
                 try
                 {
                     xModelProps->getPropertyValue( "RefValue" ) >>= pRadioWidget->OnValue;
+                }
+                catch(...)
+                {
+                }
+
+                try
+                {
+                    xModelProps->getPropertyValue( "SecondaryRefValue" ) >>= pRadioWidget->OffValue;
                 }
                 catch(...)
                 {
